Add JavaScript for fetch example

--- a/fetch/index.html
+++ b/fetch/index.html
@@ -9,6 +9,7 @@
 <body>
   <input type="text" placeholder="type your message here">
   <button>Send</button>
-  <output></output>
+  <pre></pre>
+  <script src="index.js"></script>
 </body>
 </html>
